tests/models/enum/named/u16/fail/le.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(le = 2.0)]
        value: u16
    },
}
fn main() {}
